force-app/main/default/objects/CaseMember__c/CaseMember__c.object-meta.xml
<CustomObject>
    <label>Membro do Caso</label>
    <nameField>
        <label>Nome de Membro do Caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membros do Caso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>