force-app/main/default/objects/CaseMember__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Membros do Caso</relationshipLabel>
    <relationshipName>Membros_do_Caso</relationshipName>
    <type>Lookup</type>
</CustomField>