force-app/main/default/objects/CaseMember__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
                <label>Inquilino</label>
            </value>
            <value>
                <fullName>Landlord</fullName>
                <label>Locador</label>
            </value>
            <value>
                <fullName>Owner</fullName>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>Buyer</fullName>
                <label>Comprador</label>
            </value>
            <value>
                <fullName>Seller</fullName>
                <label>Vendedor</label>
            </value>
            <value>
                <fullName>Resident</fullName>
                <label>Ocupante</label>
            </value>
            <value>
                <fullName>Service requester</fullName>
                <label>Autor da Solicitação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>