force-app/main/default/objects/CaseMember__c/listViews/RetentionQueue_CaseMember.listView-meta.xml
<ListView>
    <fullName>RetentionQueue_CaseMember</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila de retenção</label>
    <queue>RetentionQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>